# cardo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: basic.rs
scripts/: sync-readme.sh
src/: act.rs  lib.rs  lie_group.rs  lie_tangent.rs  macros.rs  mat.rs  prelude.rs  quat.rs  se3.rs  se3_tangent.rs  so3.rs  so3_tangent.rs  vector3.rs
src/framed/: macros.rs  mod.rs  so3.rs  vector3.rs
src/primitives/: mod.rs  quat.rs  vec.rs
tests/: mat.rs  primitives.rs  quat.rs  so3.rs  so3_properties.rs  test_mat.rs  test_quat.rs  test_se3.rs  test_se3_tangent.rs  test_so3.rs  test_so3_tangent.rs  test_vector3.rs  vector3.rs
tests/ui/fail/: frame_mismatch.rs  frame_mismatch.stderr
tests/ui/pass/: frame_action.rs  frame_composition.rs  rotation_inverse.rs
